Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Demo-trackable-serialization : Demo of how to serialize trackable entities.">
+    <meta name="description" content="Trackable Serialization Demo : Demo of how to serialize trackable entities.">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Demo-trackable-serialization</title>
+    <title>Trackable Serialization Demo</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/tonysneed/demo-trackable-serialization">View on GitHub</a>
 
-          <h1 id="project_title">Demo-trackable-serialization</h1>
+          <h1 id="project_title">Trackable Serialization Demo</h1>
           <h2 id="project_tagline">Demo of how to serialize trackable entities.</h2>
 
             <section id="downloads">
@@ -68,7 +68,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Demo-trackable-serialization maintained by <a href="https://github.com/tonysneed">tonysneed</a></p>
+        <p class="copyright">Trackable Serialization Demo maintained by <a href="https://github.com/tonysneed">tonysneed</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
